--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="data/dataset_1.js"></script>
     <script src="src/main.js"></script>
     <script>
-        console.log(data);
+        //console.log(data);
 
         const report = analyzeSalesData(data, {
             calculateRevenue: calculateSimpleRevenue,
